# NetModel

./: BRV.cpp  BRV.h  CMakeLists.txt  DCN.cpp  DCN.h  Graph.cpp  Graph.h  Kronecker.cpp  Kronecker.h  LICENSE  LuSuGuo.cpp  README.md  main.cpp
Models/: Graph.cpp  Graph.h  IterativeGrowth.cpp  IterativeGrowth.h  Kronecker.cpp  Kronecker.h  LuSuGuo.h
